--- a/fig-leaf.html
+++ b/fig-leaf.html
@@ -1,7 +1,7 @@
 <html>
 <body>Opening Fig-Leaf...
 <script type="text/javascript">
-window.open("fig-leaf://open");
+window.location = "fig-leaf://open";
 </script>
 </body>
 </html>
